# pyside6-todo

./: LICENSE  README.md  pyproject.toml
tests/: test_todo.py
todo/: app.py  confirm_dialog.py  main_window.py
